2008-03-29 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c: Use new 'show-page' option of mouse capplet.

2008-03-29 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-cusor.c/h: Initial commit.
	* src/mt-cusor-manager.c/h: Initial commit.
	* src/Makefile.am: Add new cursor files.
	* src/mt-main.c/h: Use new objects. Add cursor drawing code.
	* src/mt-common.h: New animate_cursor option.
	* data/mousetwaks.schemas.in: New animate_cursor option.

	Add cursor animation to give visual feedback for the internal
	state of the timers. For dwell-click this means - how long the 
	cursor has been motionless, for secondary clicks - how long the
	primary button has been pressed.
	
2008-03-28 Gerd Kohlberger <gerdk@svn.gnome.org>

	* mt-main.c: Check gconf value types before using them.

2008-03-28 Gerd Kohlberger <gerdk@svn.gnome.org>

	* mt-timer.c: Add new 'tick' signal. Remove properties.
	* mt-timer.h: Clean up.
	* mt-main.c: Use changed function name.

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* po/POTFILES.in: Remove deleted mt-dbus.c file.

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* data/pointer-capture-applet.glade:
	* data/dwell-click-applet.glade:

	Add more credits to about dialog and update copyright year.
	No doc credits yet - glade doesn't like modifying documenters atm. 

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/pointer-capture-applet.c: Clean up.

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-service.c:
	* src/mt-service.h:
	* src/mousetweaks-service.xml:
	* src/Makefile.am:

	Added new dbus object with introspection.

	* src/mt-main.c:
	* src/mt-main.h:
	* src/mt-common.h:
	* src/dwell-click-applet.c:
	* src/mt-ctw.c:
	* src/mt-ctw.h:

	Use new dbus object and some general code clean up.

2008-03-25 Gerd Kohlberger <gerdk@svn.gnome.org>

	* ChangeLog: Remove pre-gnome changes.

2008-03-25 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Fix typo.